--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -18,7 +18,7 @@ page:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://naleraphael.github.io/
-root: /
+root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -125,3 +125,4 @@ theme_config:
     issue_term: pathname
     label: Comment
     theme: icy-dark
+  tags_overview: false
