MAINT: revise config option of utterances

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -121,7 +121,7 @@ theme_config:
   highlight: hybrid.styl
   utterances:
     enable: true
-    repo: naleraphael/naleraphael.github.io
+    repo: naleraphael/blog
     issue_term: pathname
     label: Comment
     theme: icy-dark
