--- a/blog/package.json
+++ b/blog/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-search": "^2.4.0",
+    "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-markdown-it": "https://github.com/hexojs/hexo-renderer-markdown-it",
